--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
 <script>
 
   var player = null;
+  var techOrder;
+  var muted;
+  var drm;
+  var url;
+  var captions;
 
   var qs = (function (a) {
     if (a == '') return {};
@@ -205,28 +210,31 @@
     video.className = 'video-js vjs-afrostream-skin';
     video.crossOrigin = true;
     video.setAttribute('crossorigin', true);
-    var captions = [{
-      _id: "84fe17d5-6ce8-4627-9ea3-00fd2a99f7e7",
-      src: "https://s3-eu-west-1.amazonaws.com/tracks.afrostream.tv/production/caption/2015/09/6f287a7f284ea2f4c9c7-vimeocom138655523.fr.vtt",
-      kind: "captions",
-      lang: {
-        label: "Français",
-        lang: "fr"
-      }
-    },
-      {
-        _id: "aace21ac-20ba-4ea0-b4cb-6ca3d235950c",
-        src: "https://s3-eu-west-1.amazonaws.com/tracks.afrostream.tv/production/caption/2015/09/6bae0f56828f350758b6-vimeocom138655523.en.vtt",
+    var cp = [];
+
+    if (captions) {
+      cp.concat([{
+        _id: "84fe17d5-6ce8-4627-9ea3-00fd2a99f7e7",
+        src: "https://s3-eu-west-1.amazonaws.com/tracks.afrostream.tv/production/caption/2015/09/6f287a7f284ea2f4c9c7-vimeocom138655523.fr.vtt",
         kind: "captions",
         lang: {
-          label: "Anglais",
-          lang: "en"
+          label: "Français",
+          lang: "fr"
         }
-      }];
+      },
+        {
+          _id: "aace21ac-20ba-4ea0-b4cb-6ca3d235950c",
+          src: "https://s3-eu-west-1.amazonaws.com/tracks.afrostream.tv/production/caption/2015/09/6bae0f56828f350758b6-vimeocom138655523.en.vtt",
+          kind: "captions",
+          lang: {
+            label: "Anglais",
+            lang: "en"
+          }
+        }]);
+    }
 
-
-    for (var i = 0; i < captions.length; i++) {
-      var caption = captions[i];
+    for (var i = 0; i < cp.length; i++) {
+      var caption = cp[i];
       var track = document.createElement('track');
       track.setAttribute('kind', caption.kind);
       track.setAttribute('src', caption.src);
@@ -438,10 +446,11 @@
     //}
   ];
 
-  var techOrder = qs.tech ? qs.tech.split(',') : ['dash', 'html5', 'dashas'];
-  var muted = qs.muted ? qs.muted : false;
-  var drm = qs.drm ? qs.drm : false;
-  var url = qs.url ? qs.url : false;
+  techOrder = qs.tech ? qs.tech.split(',') : ['dash', 'html5', 'dashas'];
+  muted = qs.muted ? qs.muted : false;
+  drm = qs.drm ? qs.drm : false;
+  url = qs.url ? qs.url : false;
+  captions = qs.captions ? qs.captions : false;
 
   if (url) {
     sources = [
@@ -451,7 +460,7 @@
       }
     ]
   }
-  var options = {
+  options = {
     controls: true,
     autoplay: true,
     sources: sources,
