--- a/index.html
+++ b/index.html
@@ -204,16 +204,16 @@
   };
 
   var generateDomPlayer = function (opts) {
-    var container = document.getElementById('video-container');
-    var video = document.createElement('video');
-    video.id = 'player';
-    video.className = 'video-js vjs-afrostream-skin';
-    video.crossOrigin = true;
-    video.setAttribute('crossorigin', true);
-    var cp = [];
+      var container = document.getElementById('video-container');
+      var video = document.createElement('video');
+      video.id = 'player';
+      video.className = 'video-js vjs-afrostream-skin';
+      video.crossOrigin = true;
+      video.setAttribute('crossorigin', true);
+      var cp = [];
 
-    if (captions) {
-      cp.concat([{
+//    if (captions) {
+      cp = [{
         _id: "84fe17d5-6ce8-4627-9ea3-00fd2a99f7e7",
         src: "https://s3-eu-west-1.amazonaws.com/tracks.afrostream.tv/production/caption/2015/09/6f287a7f284ea2f4c9c7-vimeocom138655523.fr.vtt",
         kind: "captions",
@@ -230,36 +230,37 @@
             label: "Anglais",
             lang: "en"
           }
-        }]);
-    }
+        }];
+      //    }
 
-    for (var i = 0; i < cp.length; i++) {
-      var caption = cp[i];
-      var track = document.createElement('track');
-      track.setAttribute('kind', caption.kind);
-      track.setAttribute('src', caption.src);
-      track.setAttribute('srclang', caption.lang.lang);
-      track.setAttribute('label', caption.lang.label);
-      var isDefault = caption.lang.lang === 'fr';
-      if (isDefault) {
-        track.setAttribute('default', isDefault);
+      for (var i = 0; i < cp.length; i++) {
+        var caption = cp[i];
+        var track = document.createElement('track');
+        track.setAttribute('kind', caption.kind);
+        track.setAttribute('src', caption.src);
+        track.setAttribute('srclang', caption.lang.lang);
+        track.setAttribute('label', caption.lang.label);
+        var isDefault = caption.lang.lang === 'fr';
+        if (isDefault) {
+          track.setAttribute('default', isDefault);
+        }
+        track.setAttribute('mode', isDefault ? 'showing' : 'hidden');
+
+        video.appendChild(track);
       }
-      track.setAttribute('mode', isDefault ? 'showing' : 'hidden');
 
-      video.appendChild(track);
+      container.appendChild(video);
+
+      var mergedOpts = videojs.mergeOptions(options || {}, opts || {});
+
+      player = videojs('player', mergedOpts).ready(function () {
+        initMetrics();
+      });
+
+      player.on('loadedmetadata', resizePlayer);
+      return player;
     }
-
-    container.appendChild(video);
-
-    var mergedOpts = videojs.mergeOptions(options || {}, opts || {});
-
-    player = videojs('player', mergedOpts).ready(function () {
-      initMetrics();
-    });
-
-    player.on('loadedmetadata', resizePlayer);
-    return player;
-  };
+    ;
 
   var initPlayer = function (opts) {
     if (player) {
@@ -332,19 +333,24 @@
 
   var sources =
     [
-      {
-        "src": "https://hw.cdn.afrostream.net/vod/6207276-JOSEPHINEBAKER-PART1-4X3-133-25-EN_RID1663875_PN178503-cut/5df9fae9becaeb60.ism/master.m3u8",
-        "type": "application/vnd.apple.mpegurl"
-      },
-      {
-        "src": "https://hw.cdn.afrostream.net/vod/POETICJUSTICE_178_25_ProRes422_FRA_ENG_HD_STEREO/0a368cf6cc03e0fd.ism/0a368cf6cc03e0fd.mpd",
-        "type": "application/dash+xml"
-      },
-      {
-        "src": "https://hw.cdn.afrostream.net/vod/6207276-JOSEPHINEBAKER-PART1-4X3-133-25-EN_RID1663875_PN178503-cut/5df9fae9becaeb60.ism/MANIFEST",
-        "type": "application/vnd.ms-sstr+xml"
-      }
-      //WWWEST
+//      {
+//        "src": "https://hw.cdn.afrostream.net/vod/6207276-JOSEPHINEBAKER-PART1-4X3-133-25-EN_RID1663875_PN178503-cut/5df9fae9becaeb60.ism/master.m3u8",
+//        "type": "application/vnd.apple.mpegurl"
+//      },
+//      {
+//        "src": "https://hw.cdn.afrostream.net/vod/POETICJUSTICE_178_25_ProRes422_FRA_ENG_HD_STEREO/0a368cf6cc03e0fd.ism/0a368cf6cc03e0fd.mpd",
+//        "type": "application/dash+xml"
+//      },
+//      {
+//        "src": "https://hw.cdn.afrostream.net/vod/6207276-JOSEPHINEBAKER-PART1-4X3-133-25-EN_RID1663875_PN178503-cut/5df9fae9becaeb60.ism/MANIFEST",
+//        "type": "application/vnd.ms-sstr+xml"
+//      }
+    //BLACK ACTRESS
+    {
+      src: "https://hw.cdn.afrostream.net/vod/BlackActress_ep101/3eb142bad921d01d.ism/3eb142bad921d01d.mpd",
+      type: "application/dash+xml"
+    }
+    //WWWEST
 //    {
 //      src: "https://hw.cdn.afrostream.net/vod/WILDWILDWEST_FILMLM_16020931/3d14bbf03db5f0b5.ism/3d14bbf03db5f0b5.mpd",
 //      type: "application/dash+xml"
