replace default sources

--- a/index.html
+++ b/index.html
@@ -337,19 +337,19 @@
 
   var sources =
     [
-      { "type": "video/youtube", "src": "https://www.youtube.com/watch?v=xjS6SftYQaQ"}
-//      {
-//        "src": "https://hw.cdn.afrostream.net/vod/6207276-JOSEPHINEBAKER-PART1-4X3-133-25-EN_RID1663875_PN178503-cut/5df9fae9becaeb60.ism/master.m3u8",
-//        "type": "application/vnd.apple.mpegurl"
-//      },
-//      {
-//        "src": "https://hw.cdn.afrostream.net/vod/POETICJUSTICE_178_25_ProRes422_FRA_ENG_HD_STEREO/0a368cf6cc03e0fd.ism/0a368cf6cc03e0fd.mpd",
-//        "type": "application/dash+xml"
-//      },
-//      {
-//        "src": "https://hw.cdn.afrostream.net/vod/6207276-JOSEPHINEBAKER-PART1-4X3-133-25-EN_RID1663875_PN178503-cut/5df9fae9becaeb60.ism/MANIFEST",
-//        "type": "application/vnd.ms-sstr+xml"
-//      }
+      {"type": "video/youtube", "src": "https://www.youtube.com/watch?v=xjS6SftYQaQ"}
+      {
+        "src": "https://hw.cdn.afrostream.net/vod/6207276-JOSEPHINEBAKER-PART1-4X3-133-25-EN_RID1663875_PN178503-cut/5df9fae9becaeb60.ism/master.m3u8",
+        "type": "application/vnd.apple.mpegurl"
+      },
+      {
+        "src": "https://hw.cdn.afrostream.net/vod/POETICJUSTICE_178_25_ProRes422_FRA_ENG_HD_STEREO/0a368cf6cc03e0fd.ism/0a368cf6cc03e0fd.mpd",
+        "type": "application/dash+xml"
+      },
+      {
+        "src": "https://hw.cdn.afrostream.net/vod/6207276-JOSEPHINEBAKER-PART1-4X3-133-25-EN_RID1663875_PN178503-cut/5df9fae9becaeb60.ism/MANIFEST",
+        "type": "application/vnd.ms-sstr+xml"
+      }
     //BLACK ACTRESS
 //    {
 //      src: "https://hw.cdn.afrostream.net/vod/BlackActress_ep101/3eb142bad921d01d.ism/3eb142bad921d01d.mpd",
