add switch options cache for eb

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
   var sources =
     [
-      { "type": "video/youtube", "src": "https://www.youtube.com/watch?v=xjS6SftYQaQ"}
+      {"type": "video/youtube", "src": "https://www.youtube.com/watch?v=xjS6SftYQaQ"}
 //      {
 //        "src": "https://hw.cdn.afrostream.net/vod/6207276-JOSEPHINEBAKER-PART1-4X3-133-25-EN_RID1663875_PN178503-cut/5df9fae9becaeb60.ism/master.m3u8",
 //        "type": "application/vnd.apple.mpegurl"
@@ -501,6 +501,7 @@
       swf: './dashas.swf'
     },
     dash: {
+      trackSwitchMode: 'neverReplace',
       nativeCaptions: false,
       nativeTextTracks: false,
       autoSwitch: true,
