streamroot: update key

--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
     dash: dashOpts,
     streamroot: videojs.mergeOptions(dashOpts, {
       p2pConfig: {
-        streamrootKey: 'a913c6b8-5037-4ed8-9c94-918f70c40320'
+        streamrootKey: 'ry-0gzuhlor'
       }
     }),
     chromecast: {},
