--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
   <script src="/node_modules/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
   <link href="/node_modules/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
 
-  <!--KOMENT.IO-->
-  <link href="https://www.koment.io/dist/koment.css" rel="stylesheet">
 </head>
 <body>
 <div class="row">
@@ -62,8 +60,8 @@
 <script src="/node_modules/smoothie/smoothie.js"></script>
 <script src="/dist/afrostream-player.js"></script>
 <!--KOMENT.IO-->
-<script src="https://www.koment.io/dist/koment.js"></script>
-<link href="https://www.koment.io/dist/koment.css" rel="stylesheet">
+<!--<script src="https://www.koment.io/dist/koment.js"></script>-->
+<!--<link href="https://www.koment.io/dist/koment.css" rel="stylesheet">-->
 <script>
 
   var player = null;
@@ -218,7 +216,8 @@
       video.className = 'video-js vjs-afrostream-skin';
       video.crossOrigin = true;
       video.setAttribute('crossorigin', true);
-      video.setAttribute('data-setup', '{"controls":1}');
+      video.setAttribute('data-setup', '{"controls":1,"api":"https://afr-api-v1-staging.herokuapp.com/api/videos/c1ee3b32-0bf8-4873-b173-09dc055b7bfe/comments","token":"cab46dacdc415f7fef0166b211afd9dcf7b9ab70","user":{"id":"toto","avatar":"//graph.facebook.com/10204404008400201/picture","username":"benjipott"},"languages":{"fr":{"Send":"Envoyer","Add your comment here...":"Commenter ce passage de la video..."}}}');
+
       var cp = [];
 
 //    if (captions) {
