--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
       video.className = 'video-js vjs-afrostream-skin';
       video.crossOrigin = true;
       video.setAttribute('crossorigin', true);
-      video.setAttribute('data-setup', '{"controls":1,"api":"https://afr-api-v1-staging.herokuapp.com/api/videos/c1ee3b32-0bf8-4873-b173-09dc055b7bfe/comments","token":"cab46dacdc415f7fef0166b211afd9dcf7b9ab70","user":{"id":"toto","avatar":"//graph.facebook.com/10204404008400201/picture","username":"benjipott"},"languages":{"fr":{"Send":"Envoyer","Add your comment here...":"Commenter ce passage de la video..."}}}');
+      video.setAttribute('data-setup', '{"controls":1,"api":"https://afr-api-v1-staging.herokuapp.com/api/videos/c1ee3b32-0bf8-4873-b173-09dc055b7bfe/comments","token":"cab46dacdc415f7fef0166b211afd9dcf7b9ab70","user":{"id":"toto","picture":"//graph.facebook.com/10204404008400201/picture","name":"benjipott"},"languages":{"fr":{"Send":"Envoyer","Add your comment here...":"Commenter ce passage de la video..."}}}');
 
       var cp = [];
 
