--- a/index.html
+++ b/index.html
@@ -209,67 +209,84 @@
 
   };
 
+  var komentData = {
+    "controls": 1,
+    "api": "https://afr-api-v1-staging.herokuapp.com/api/videos/c1ee3b32-0bf8-4873-b173-09dc055b7bfe/comments",
+    "token": "cab46dacdc415f7fef0166b211afd9dcf7b9ab70",
+    "user": {
+      "id": "toto",
+      "picture": "//graph.facebook.com/10204404008400201/picture",
+      "name": "benjipott"
+    },
+    "languages": {
+      "fr": {
+        "Send": "Envoyer",
+        "Add your comment here...": "Commenter ce passage de la video..."
+      }
+    }
+  };
   var generateDomPlayer = function (opts) {
-      var container = document.getElementById('video-container');
-      var video = document.createElement('video');
+    var container = document.getElementById('video-container');
+    var video = document.createElement('video');
 
-      video.id = 'player';
-      video.className = 'video-js vjs-afrostream-skin';
-      video.crossOrigin = true;
-      video.setAttribute('crossorigin', true);
-      video.setAttribute('data-setup', '{"controls":1,"api":"https://afr-api-v1-staging.herokuapp.com/api/videos/c1ee3b32-0bf8-4873-b173-09dc055b7bfe/comments","token":"cab46dacdc415f7fef0166b211afd9dcf7b9ab70","user":{"id":"toto","picture":"//graph.facebook.com/10204404008400201/picture","name":"benjipott"},"languages":{"fr":{"Send":"Envoyer","Add your comment here...":"Commenter ce passage de la video..."}}}');
+    video.id = 'player';
+    video.className = 'video-js vjs-afrostream-skin';
+    video.crossOrigin = true;
+    video.setAttribute('crossorigin', true);
+    video.setAttribute('data-setup', JSON.stringify(komentData));
 
-      var cp = [];
+    var cp = [];
 
 //    if (captions) {
-      cp = [{
-        _id: "84fe17d5-6ce8-4627-9ea3-00fd2a99f7e7",
-        src: "https://s3-eu-west-1.amazonaws.com/tracks.afrostream.tv/production/caption/2015/09/6f287a7f284ea2f4c9c7-vimeocom138655523.fr.vtt",
+    cp = [{
+      _id: "84fe17d5-6ce8-4627-9ea3-00fd2a99f7e7",
+      src: "https://s3-eu-west-1.amazonaws.com/tracks.afrostream.tv/production/caption/2015/09/6f287a7f284ea2f4c9c7-vimeocom138655523.fr.vtt",
+      kind: "captions",
+      lang: {
+        label: "Français",
+        lang: "fr"
+      }
+    },
+      {
+        _id: "aace21ac-20ba-4ea0-b4cb-6ca3d235950c",
+        src: "https://s3-eu-west-1.amazonaws.com/tracks.afrostream.tv/production/caption/2015/09/6bae0f56828f350758b6-vimeocom138655523.en.vtt",
         kind: "captions",
         lang: {
-          label: "Français",
-          lang: "fr"
+          label: "Anglais",
+          lang: "en"
         }
-      },
-        {
-          _id: "aace21ac-20ba-4ea0-b4cb-6ca3d235950c",
-          src: "https://s3-eu-west-1.amazonaws.com/tracks.afrostream.tv/production/caption/2015/09/6bae0f56828f350758b6-vimeocom138655523.en.vtt",
-          kind: "captions",
-          lang: {
-            label: "Anglais",
-            lang: "en"
-          }
-        }];
-      //    }
+      }];
+    //    }
 
-      for (var i = 0; i < cp.length; i++) {
-        var caption = cp[i];
-        var track = document.createElement('track');
-        track.setAttribute('kind', caption.kind);
-        track.setAttribute('src', caption.src);
-        track.setAttribute('srclang', caption.lang.lang);
-        track.setAttribute('label', caption.lang.label);
-        var isDefault = caption.lang.lang === 'fr';
-        if (isDefault) {
-          track.setAttribute('default', isDefault);
-        }
-        track.setAttribute('mode', isDefault ? 'showing' : 'hidden');
-
-        video.appendChild(track);
+    for (var i = 0; i < cp.length; i++) {
+      var caption = cp[i];
+      var track = document.createElement('track');
+      track.setAttribute('kind', caption.kind);
+      track.setAttribute('src', caption.src);
+      track.setAttribute('srclang', caption.lang.lang);
+      track.setAttribute('label', caption.lang.label);
+      var isDefault = caption.lang.lang === 'fr';
+      if (isDefault) {
+        track.setAttribute('default', isDefault);
       }
+      track.setAttribute('mode', isDefault ? 'showing' : 'hidden');
 
-      container.appendChild(video);
-
-      var mergedOpts = videojs.mergeOptions(options || {}, opts || {});
-
-      player = videojs('player', mergedOpts).ready(function () {
-        initMetrics();
-      });
-
-      player.on('loadedmetadata', resizePlayer);
-      return player;
+      video.appendChild(track);
     }
-    ;
+
+    container.appendChild(video);
+
+    var mergedOpts = videojs.mergeOptions(options || {}, opts || {});
+
+    player = videojs('player', mergedOpts).ready(function () {
+      initMetrics();
+    });
+
+    videojs.koment(player.tech_.el_);
+
+    player.on('loadedmetadata', resizePlayer);
+    return player;
+  };
 
   var initPlayer = function (opts) {
     if (player) {
@@ -542,10 +559,11 @@
     chromecast: {},
     techOrder: techOrder
   };
+  setTimeout(function () {
 
-
-  initPlayer();
-  initInputs();
+    initPlayer();
+    initInputs();
+  }, 3000)
 
   var smoothieConfig = {
     maxValueScale: 1.28,
