--- a/index.html
+++ b/index.html
@@ -210,16 +210,19 @@
   };
 
   var komentData = {
-    "controls": 1,
-    "api": "https://afr-api-v1-staging.herokuapp.com/api/videos/c1ee3b32-0bf8-4873-b173-09dc055b7bfe/comments",
-    "token": "cab46dacdc415f7fef0166b211afd9dcf7b9ab70",
+    "videoId": "toto",
     "user": {
       "id": "toto",
-      "picture": "//graph.facebook.com/10204404008400201/picture",
-      "name": "benjipott"
+      "avatar": "//graph.facebook.com/10204404008400201/picture",
+      "nickname": "benjipott",
+      "token": "cab46dacdc415f7fef0166b211afd9dcf7b9ab70",
     },
     "languages": {
       "fr": {
+        "Koment": "Afficher les commentaires",
+        "Non-Koment": "Masquer les commentaires",
+        "List": "Liste des commentaires",
+        "Edit": "Commenter",
         "Send": "Envoyer",
         "Add your comment here...": "Commenter ce passage de la video..."
       }
