fix koment list button

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
   };
 
   var komentData = {
-    "videoId": "toto",
+    //"videoId": "toto",
     "user": {
       "id": "toto",
       "avatar": "//graph.facebook.com/10204404008400201/picture",
