fix koment conflict width youtube

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       //initMetrics();
     });
 
-//    videojs.koment(player.tech_.el_);
+    videojs.koment(player.tech_.el_);
 
     player.on('loadedmetadata', resizePlayer);
     return player;
@@ -388,9 +388,14 @@
 //      type: "application/dash+xml"
 //    }
     //SOUNDCLOUD
+//    {
+//      src: 'https://soundcloud.com/yozzie-b/rhiana-where-have-u-been-ukg',
+//      type: 'video/soundcloud'
+//    }
+    //YOUTUBE
     {
-      src: 'https://soundcloud.com/yozzie-b/rhiana-where-have-u-been-ukg',
-      type: 'video/soundcloud'
+      src: 'https://www.youtube.com/watch?v=kOkQ4T5WO9E',
+      type: 'video/youtube'
     }
     //24HOURLOVE
 //    {
