--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <link href="/node_modules/bootstrap-slider/dist/css/bootstrap-slider.css" rel="stylesheet">
   <script src="/node_modules/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
   <link href="/node_modules/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css" rel="stylesheet">
+  <script src="//smartplugin.youbora.com/v5/javascript/videojs5/5.1.3/sp.min.js"></script>
 
 </head>
 <body>
@@ -576,6 +577,12 @@
         streamrootKey: 'ry-0gzuhlor'
       }
     }),
+    youbora: {
+      'accountCode': 'afrostreamdev',
+      'enableAnalytics': true,
+      'httpSecure': true,
+      'transactionCode': 'front'
+    },
     chromecast: {},
     techOrder: techOrder
   };
