--- a/index.html
+++ b/index.html
@@ -578,10 +578,21 @@
       }
     }),
     youbora: {
-      'accountCode': 'afrostreamdev',
-      'enableAnalytics': true,
-      'httpSecure': true,
-      'transactionCode': 'front'
+      accountCode: 'afrostreamdev',
+      enableAnalytics: true,
+      httpSecure: true,
+      transactionCode: 'front',
+      media: {
+        username: 224,
+        media: {
+          title: 'test',
+          duration: 55555,
+          isLive: false
+        },
+        properties: {
+          content_id: 'fakeId',
+        }
+      }
     },
     chromecast: {},
     techOrder: techOrder
