--- a/index.html
+++ b/index.html
@@ -223,16 +223,6 @@
       "avatar": "//graph.facebook.com/10204404008400201/picture",
       "nickname": "benjipott",
       "token": "cab46dacdc415f7fef0166b211afd9dcf7b9ab70",
-    },
-    "languages": {
-      "fr": {
-        "Koment": "Afficher les commentaires",
-        "Non-Koment": "Masquer les commentaires",
-        "List": "Liste des commentaires",
-        "Edit": "Commenter",
-        "Send": "Envoyer",
-        "Add your comment here...": "Commenter ce passage de la video..."
-      }
     }
   };
   var generateDomPlayer = function (opts) {
@@ -599,7 +589,24 @@
       }
     }),
     chromecast: {},
-    techOrder: techOrder
+    techOrder: techOrder,
+    "languages": {
+      "fr": {
+        "Koment": "Afficher les commentaires",
+        "Non-Koment": "Masquer les commentaires",
+        "List": "Liste des commentaires",
+        "Edit": "Commenter",
+        "Send": "Envoyer",
+        "Add your comment here...": "Commenter ce passage de la video..."
+      }
+    },
+    koment: {
+      user: {
+        id: 'toto',
+        avatar: '//graph.facebook.com/10204404008400201/picture',
+        nickname: 'benjipott'
+      }
+    }
   };
 
 
