replace dashjs@2.3.0 because init captions don't show

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
   }
 
   dashOpts = {
-    trackSwitchMode: 'neverReplace',
+    trackSwitchMode: 'alwaysReplace',
     nativeCaptions: false,
     nativeTextTracks: false,
     autoSwitch: true,
