--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     for (var i = 0; i < keys.length; i++) {
       var key = keys[i];
       var value = values[key];
-      if (typeof value === 'object') {
+      if (typeof value === 'object' && value) {
         initInputs(value);
       }
       createInputs(key, value);
