--- a/index.html
+++ b/index.html
@@ -517,6 +517,17 @@
     scheduleWhilePaused: true,
     initialBitrate: 400,
     liveFragmentCount: 4,
+    inititalMediaSettings: {
+      text: {
+        lang: 'eng'
+      },
+      audio: {
+        lang: 'eng'
+      },
+      video: {
+        lang: 'eng'
+      }
+    },
     buffer: {
       bufferToKeep: 60,
       minBufferTime: 16,
